autotrade-binance-dash/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: autotrade-binance-dash
  namespace: coinauto
spec:
  hosts:
  - autotrade-dash.apps.lab3.dslee.lab
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri: { prefix: "/" }
    route:
    - destination:
        host: autotrade-binance-dash.coinauto.svc.cluster.local
        port: { number: 80 }
